Factored out sticky footer into a separate file and removed it from the site.  This fixes the horizontal scrolling problem, although the footer no longer sticks to the bottom on short pages.

--- a/media/css/home.css
+++ b/media/css/home.css
@@ -1,7 +1,7 @@
 
 /* left and right columns */
-#home-leftcol { float: left; width:45%; }
-#home-rightcol { float: right; width:45%; }
+#home-leftcol { float: left; width:50%; }
+#home-rightcol { float: right; width:50%; }
 
 .home-borderlessbox { padding-top:30px; }
 
